src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>AccNo-{00000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Count__c</fullName>
        <label>Batch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_verified__c</fullName>
        <label>Contact verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KYC_Flag__c</fullName>
        <formula>IMAGE(
CASE(KYC_Status__c,
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Red&quot;,&quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KYC Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Status__c</fullName>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location1__c</fullName>
        <label>Location1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Duplicate__c</fullName>
        <label>Related Duplicate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Limit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Limit</label>
        <referenceTo>Transaction_Limit__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>check_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>check box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>default_val__c</fullName>
        <defaultValue>0</defaultValue>
        <label>default val 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>for_workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>for workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percentage__c</fullName>
        <label>percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Recipes_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All Recipes Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Record_Type1</fullName>
        <active>true</active>
        <label>Record Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type2</fullName>
        <active>true</active>
        <label>Record Type2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Available_Balance</fullName>
        <active>false</active>
        <description>This VR is created for Available balance field.</description>
        <errorConditionFormula>OR( 
AND( OR(ISNEW(), ISCLONE()), OR(ISBLANK(Available_Balance__c), Available_Balance__c  &lt;&gt; 0))
)</errorConditionFormula>
        <errorDisplayField>Available_Balance__c</errorDisplayField>
        <errorMessage>Available Balance Can&apos;t be blank, more than 0(on create) or changed.</errorMessage>
    </validationRules>
</CustomObject>